--- a/app/src/main/res/layout/activity_curiosity.xml
+++ b/app/src/main/res/layout/activity_curiosity.xml
@@ -10,6 +10,35 @@
     tools:context=".CuriosityActivity">
 
     <TextView
+        android:id="@+id/txtcharacter"
+        android:layout_width="400dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="284dp"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtCharacter"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/txtCharacter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="84dp"
+        android:text="@string/text_character"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgHouse" />
+
+    <TextView
         android:id="@+id/txtTittleCuriosity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
